--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,12 @@ nav {
   margin-bottom: 100px;
 }
 
+.logo {
+  font-size: 24px;
+  color: #E5E7EB;
+  font-weight: 900;
+}
+
 ul {
   list-style: none;
   display: flex;
